fixed spacing

--- a/css/lessons.css
+++ b/css/lessons.css
@@ -23,7 +23,6 @@
 .card-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -35,6 +34,7 @@
   padding: 25px;
   border-radius: 10px;
   margin-top: 45px;
+  margin: 10px 10px;
 }
 
 .heading-container {
